2005-05-18    <ssp@aware-of-vacuity.boston.redhat.com>

	* src/Makefile.am (INCLUDES): Also include include/X11

